--- a/src/app/styles/components/bottom-navbar.scss
+++ b/src/app/styles/components/bottom-navbar.scss
@@ -1,8 +1,8 @@
 .bottom-navbar {
-  display: none;
+  display: none !important;
 
   @media (max-width: 768px) {
-    display: flex;
+    display: none !important;
     position: fixed;
     bottom: 0;
     left: 0;
